# WeChat

./: .gitignore  GateServer.code-workspace  README.en.md  README.md
ChatServer/: AsioIOcontextPool.cpp  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  Crypto.cpp  HttpConnection.cpp  HttpConnection.h  LogicNode.cpp  LogicNode.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MySQLMgr.cpp  MySQLMgr.h  RedisMgr.cpp  RedisMgr.h  SendNode.cpp  SendNode.h  SessionMgr.cpp  SessionMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  Test.hpp  config.ini  const.h  main.cpp  singleton.hpp
ChatServer/database/: chat_tables.sql
GateServer/: AsioIOcontextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.hpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySQLMgr.cpp  MySQLMgr.h  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  Test.hpp  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  main.cpp  message.grpc.pb.h  message.pb.cc  message.pb.h  singleton.hpp
StatusServer/: AsioIOcontextPool.cpp  CMakeLists.txt  Crypto.cpp  Crypto.h  Defer.hpp  MySQLMgr.cpp  RedisMgr.cpp  RedisMgr.h  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  main.cpp  message.grpc.pb.cc  message.proto
VerifyServer/: config.js  config.json  const.js  package-lock.json  package.json  proto.js  redis.js  server.js
docs/: 00-project-overview.md  01-api-reference.md  02-boost-asio-beast.md  03-grpc-distributed.md  04-threading-threadpool.md  05-modern-cpp.md  06-external-libs.md  07-risks-improvements.md
qt/WeChat/: BUILD.md  WeChat.pro  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpagewidget.cpp  chatpagewidget.h  chatpagewidget.ui  chatpagewidget.ui.autosave  chatuserlist.cpp  chatuserlist.h  chatuserwidget.cpp  chatuserwidget.h  chatuserwidget.ui  chatview.cpp  chatview.h  chatwindow.cpp  chatwindow.h  contactlistwidget.cpp  contactlistwidget.h  friendrequestdialog.cpp  friendrequestdialog.h  friendrequestdialog.ui  global.cpp  global.h  groupinfodialog.cpp  groupinfodialog.h  groupinfodialog.ui  grouplistwidget.cpp  grouplistwidget.h  httpclient.cpp  httpclient.h  httpmgr.cpp  httpmgr.h  listitembase.cpp  listitembase.h  (+49 more)
qt/WeChat/qss/: default.qss
qt/WeChat/style/: stylesheet.qss
